--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    tools:context=".MainActivity" tools:ignore="MergeRootFrame" />
+    tools:context=".MainActivity" tools:ignore="MergeRootFrame" >
+<Button android:id="@+id/btnViewProducts"
+android:layout_width="fill_parent"
+android:layout_height="wrap_content"
+android:text="View Products"
+android:layout_marginTop="25dip"/>
+
+    </FrameLayout>
