--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,9 +10,10 @@ android:paddingBottom="@dimen/activity_vertical_margin"
 tools:context=".MainActivity$PlaceholderFragment">
 
 
-<ListView
-    android:id="@+id/list_forms"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+        <ListView
+            android:id="@android:id/list"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"/>
+
 
 </FrameLayout>
